# libinotify

./: README.md  TODO  libinotify.cpp  meson.build
doc/: uml.mdj
example/: main.cpp  meson.build
libinotify/: #pragma once.cpp  cpp.hpp  libinotify.cpp  libinotify.hpp  meson.build
libinotify/bits/: events.hpp  events.ixx  flags.hpp  flags.ixx  kernel.hpp  kernel.ixx  mask.hpp  mask.ixx
libinotify/filesystem/: fileSystemManager.cpp  file_system.cpp  file_system.hpp
libinotify/fmt/: fmt.hpp
